<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tab_feed"
        android:enabled="true"
        android:icon="@drawable/ic_view_stream_white_24dp"
        android:title="@string/feed"
        app:showAsAction="withText" />

    <item
        android:id="@+id/tab_search"
        android:enabled="true"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/search"
        app:showAsAction="withText" />

    <item
        android:id="@+id/tab_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/profile"
        app:showAsAction="withText" />

</menu>