<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cybereyestudios.bettertogether.WelcomeActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FF212121"
        android:textSize="24pt" />

    <View
        android:id="@+id/spacerHorizontalCenter"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonFacebookSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="7dp"
        android:layout_toLeftOf="@+id/spacerHorizontalCenter"
        android:layout_toStartOf="@+id/spacerHorizontalCenter"
        android:text="@string/facebook_sign_in" />

    <Button
        android:id="@+id/buttonGoogleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonFacebookSignIn"
        android:layout_alignBottom="@+id/buttonFacebookSignIn"
        android:layout_toEndOf="@+id/buttonFacebookSignIn"
        android:layout_toRightOf="@+id/buttonFacebookSignIn"
        android:text="@string/google_sign_in" />

    <Button
        android:id="@+id/buttonEmailSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonGoogleSignIn"
        android:layout_toEndOf="@+id/buttonFacebookSignIn"
        android:layout_toRightOf="@+id/buttonFacebookSignIn"
        android:text="@string/email_sign_up" />

    <Button
        android:id="@+id/buttonEmailSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonEmailSignUp"
        android:layout_alignBottom="@+id/buttonEmailSignUp"
        android:layout_alignEnd="@+id/spacerHorizontalCenter"
        android:layout_alignRight="@+id/spacerHorizontalCenter"
        android:text="@string/email_sign_in" />

</RelativeLayout>
